--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "arap-baci-backend",
   "type": "module",
   "version": "1.0.0",
+  "engines": {
+    "node": "20"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.0",
     "multer": "^2.0.2",
     "openai": "^6.10.0"
   }
